--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
     "url": "https://github.com/colohr/wwi/issues"
   },
   "dependencies": {
-    "fxy": "^0.1.68",
-    "wxy": "^0.0.500"
+    "fxy": "^0.1.7",
+    "wxy": "^0.0.501"
   },
-  "description": "World Wide Internet: A Web Component Tool",
+  "description": "Web Component Toolbox: includes front-end tools, server-side tools & optional component sets created with wwi.",
   "homepage": "https://github.com/colohr/wwi#readme",
   "keywords": [
-    "Web Components",
-    "Custom Elements",
-    "Shadow Dom"
+    "web components",
+    "custom elements",
+    "shadow dom",
+    "front-end",
+    "sxy"
   ],
   "license": "ISC",
   "main": "./lib/index.js",
@@ -21,5 +23,5 @@
     "type": "git",
     "url": "git+https://github.com/colohr/wwi.git"
   },
-  "version": "0.0.602"
+  "version": "0.0.603"
 }
