--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "url": "https://github.com/colohr/wwi/issues"
   },
   "dependencies": {
-    "fxy": "^0.1.71",
-    "wxy": "^0.0.731"
+    "fxy": "0.1.71",
+    "wxy": "0.0.733"
   },
   "description": "Web Component Toolbox: includes front-end tools, server-side tools & optional component sets created with wwi.",
   "homepage": "https://github.com/colohr/wwi#readme",
@@ -17,5 +17,8 @@
     "type": "git",
     "url": "git+https://github.com/colohr/wwi.git"
   },
-  "version": "0.0.731"
+  "scripts": {
+    "prepublishOnly": "node ../@colohr/code/publish"
+  },
+  "version": "0.0.733"
 }
